# mbpol_benchmark_3body_polynomials

./: CMakeLists.txt  run_test.cpp
include/: cuda_3b.h
kernels/: 3b_maple.cu  3b_maple_polynomial.cu
